# Watchflow

./: .gitignore  CHANGELOG.md  pyproject.toml  watchflow.yaml
.claude/: settings.local.json
.hypothesis/constants/: 0019c6a267d025e1  004e722d2b39195a  009298dc5190c8bd  00a095d2d41fed66  017531f0e829ce4f  0199ac9602548c81  01e01103d68a3193  0213343f1393a3fa  02c43b4f55dae762  02eceb2fd2d826c2  03a0bc33c3be41ac  041b82baf95116f0  044c9664c732c0e2  045e17b2528b2b5c  0570a7c52cd987f9  05ddb965a4342101  0628f2618034526e  068c9e16d4886008  069f1bbe681b4325  0736e2d4acddd01a  07475514dc0bbadb  07b8446a052edf99  084c48810f649441  085afee46c248b9c  09482feeaa124f43  0967afddd3cfffcc  09a20f6b52e6dcc7  09ae28b390a241d0  09e51e4d7e8d7e87  09fc23090f4ca7b1  0ac765fb060691b5  0b08334a64a0dc37  0b1d2411e5eaa76a  0b870b04b5a54e01  0bc3b2f77e74ecd9  0c23327e39eaa492  0d65a410db824952  0d7e7231eed3a4e1  0d81dd8c57144454  0e21515a1a3d48b3  (+812 more)
src/watchflow/: __init__.py  __main__.py
src/watchflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/watchflow/cli/: daemon.py  main.py
src/watchflow/config/: loader.py  schema.py
src/watchflow/core/: event_bus.py  events.py  signal_router.py  state_machine.py  task_supervisor.py  wal.py
src/watchflow/engine/: reactive_engine.py
src/watchflow/plugins/: builtin.py
tests/: conftest.py
tests/test_cli/: test_commands.py
tests/test_config/: test_loader.py  test_schema.py
tests/test_core/: test_event_bus.py  test_signal_router.py  test_state_machine.py  test_task_supervisor.py  test_wal.py
tests/test_execution/: test_dag_engine.py
tests/test_hooks/: test_plugin_system.py
tests/test_intelligence/: test_intent_detector.py
tests/test_telemetry/: test_metrics.py
tests/test_watchers/: test_debounce.py
(+9 files in other folders)
